[package]
name = "yew-practice"
version = "0.1.0"
authors = ["wasanx25 <wasanx25@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
yew = { version = "0.17", features = ["web_sys"] }
web-sys = { version = "*", features = ["Element", "Window", "DataTransfer", "DragEvent"]}
wasm-bindgen = "0.2"
js-sys = "0.3"
